# arrow-datafusion-comet

./: pom.xml
common/src/main/java/org/apache/comet/parquet/: BatchReader.java  ColumnReader.java
common/src/main/java/org/apache/comet/vector/: CometDelegateVector.java  CometVector.java
common/src/main/scala/org/apache/comet/: CometConf.scala
common/src/main/scala/org/apache/comet/vector/: NativeUtil.scala  StreamReader.scala
common/src/main/scala/org/apache/spark/sql/comet/execution/shuffle/: ArrowReaderIterator.scala
common/src/main/scala/org/apache/spark/sql/comet/util/: Utils.scala
common/src/test/java/org/apache/comet/parquet/: TestColumnReader.java
core/src/execution/datafusion/: planner.rs
core/src/execution/operators/: mod.rs  scan.rs
core/src/execution/proto/: expr.proto
core/src/jvm_bridge/: batch_iterator.rs
core/src/parquet/: mutable_vector.rs
core/src/parquet/read/: values.rs
docs/source/user-guide/: configs.md
native/: Cargo.toml
native/core/: Cargo.toml
native/core/src/common/: buffer.rs
native/core/src/execution/: jni_api.rs  utils.rs
native/core/src/execution/datafusion/: planner.rs  shuffle_writer.rs
native/core/src/execution/operators/: copy.rs  mod.rs  row_to_columnar.rs  scan.rs
native/core/src/execution/shuffle/: row.rs
native/core/src/jvm_bridge/: mod.rs  row_iterator.rs
native/core/src/parquet/: mod.rs  mutable_vector.rs
native/core/src/parquet/read/: column.rs
native/proto/src/proto/: operator.proto
spark/src/main/java/org/apache/comet/: CometBatchIterator.java  CometRowIterator.java
spark/src/main/java/org/apache/spark/shuffle/comet/: CometShuffleMemoryAllocator.java
spark/src/main/java/org/apache/spark/shuffle/sort/: CometShuffleExternalSorter.java
spark/src/main/java/org/apache/spark/sql/comet/execution/shuffle/: CometUnsafeShuffleWriter.java
spark/src/main/scala/org/apache/comet/: CometExecIterator.scala  CometSparkSessionExtensions.scala  Native.scala
spark/src/main/scala/org/apache/comet/serde/: QueryPlanSerde.scala
spark/src/main/scala/org/apache/comet/shims/: ShimCometShuffleExchangeExec.scala
spark/src/main/scala/org/apache/spark/sql/comet/: CometBroadcastExchangeExec.scala  CometExecRDD.scala  CometExecUtils.scala  CometRowToColumnarExec.scala  CometScanExec.scala  CometTakeOrderedAndProjectExec.scala  operators.scala
spark/src/main/scala/org/apache/spark/sql/comet/execution/shuffle/: CometShuffleExchangeExec.scala
spark/src/test/resources/tpcds-plan-stability/approved-plans-v1_4/q98/: explain.txt  simplified.txt
spark/src/test/resources/tpcds-plan-stability/approved-plans-v2_7/q24/: explain.txt  simplified.txt
spark/src/test/resources/tpcds-plan-stability/approved-plans-v2_7/q98/: explain.txt  simplified.txt
spark/src/test/scala/org/apache/comet/exec/: CometAggregateSuite.scala  CometColumnarShuffleSuite.scala  CometExecSuite.scala
spark/src/test/scala/org/apache/spark/sql/: CometTPCDSQuerySuite.scala
