# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["core", "spark-expr", "proto"]
resolver = "2"

[workspace.package]
version = "0.4.0"
homepage = "https://datafusion.apache.org/comet"
repository = "https://github.com/apache/datafusion-comet"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache DataFusion Comet: High performance accelerator for Apache Spark"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# Comet uses the same minimum Rust version as DataFusion
rust-version = "1.75"

[workspace.dependencies]
arrow = { path = "../../arrow-rs/arrow", features = ["prettyprint", "ffi", "chrono-tz"] }
arrow-array = { path = "../../arrow-rs/arrow-array" }
arrow-buffer = { path = "../../arrow-rs/arrow-buffer" }
arrow-data = { path = "../../arrow-rs/arrow-data" }
arrow-schema = { path = "../../arrow-rs/arrow-schema" }
parquet = { path = "../../arrow-rs/parquet", default-features = false, features = ["experimental"] }
datafusion-common = { path = "../../arrow-datafusion/datafusion/common" }
datafusion = { path = "../../arrow-datafusion/datafusion/core", default-features = false, features = ["unicode_expressions", "crypto_expressions"] }
datafusion-functions = { path = "../../arrow-datafusion/datafusion/functions", features = ["crypto_expressions"] }
datafusion-functions-nested = { path = "../../arrow-datafusion/datafusion/functions-nested", default-features = false }
datafusion-expr = { path = "../../arrow-datafusion/datafusion/expr", default-features = false }
datafusion-execution = { path = "../../arrow-datafusion/datafusion/execution", default-features = false }
datafusion-physical-plan = { path = "../../arrow-datafusion/datafusion/physical-plan", default-features = false }
datafusion-physical-expr = { path = "../../arrow-datafusion/datafusion/physical-expr", default-features = false }
datafusion-comet-spark-expr = { path = "spark-expr", version = "0.4.0" }
datafusion-comet-proto = { path = "proto", version = "0.4.0" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.8" }
num = "0.4"
rand = "0.8"
regex = "1.9.6"
thiserror = "1"

[profile.release]
debug = true
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = "debuginfo"
